@@ -2,8 +2,7 @@
 v2.30.3
 -------
 
-
-
+|+
 
 -------
 v2.30.2
@@ -23,6 +22,8 @@ v2.30.1
 v2.30.0
 -------
 
+[mjr] Fix removing fetch query labels in PHP 8 (PR #12, Ralf
+      Becker<rb@egroupware.org>)
 [mjr] Remove redundant array_diff that could cause removal of emails from local
       message cache (PR #3, Silvio Zimmer <silvio.zimmer@die-kinderwelt.com>).
 [mjr] Support returning entire thread list (Ticket #14943,
